Refactored and rewrote methods in Hand.java. (IDK why I had them take in Hand parameters knowing it belonged to the class)